--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 <div class="content">
                     <div class="header__columns">
                         <div class="header__col col--1"><a href="#" class="header__logo w-inline-block"><img
-                                    src="/Assest/Images/LOGO.SVG" loading="lazy" alt="" /></a></div>
+                                    src="/Assest/Images/LOGO.svg" loading="lazy" alt="" /></a></div>
                         <div class="header__col">
                             <nav class="nav"><a href="#find-passion" class="nav__link mod--fixed">Find passion</a><a
                                     href="#categories" class="nav__link mod--fixed">Categories</a><a href="#skills"
@@ -444,7 +444,7 @@
                 <div class="content">
                     <div class="header__columns">
                         <div class="header__col col--1"><a href="#" class="header__logo w-inline-block"><img
-                                    src="/Assest/Images/LOGO.SVG" loading="lazy" alt="" class="logo-img" /></a></div>
+                                    src="/Assest/Images/LOGO.svg" loading="lazy" alt="" class="logo-img" /></a></div>
                         <div class="header__col col--2">
                             <nav class="nav"><a href="#find-passion" class="nav__link">Find passion</a><a
                                     href="#categories" class="nav__link">Categories</a><a href="#skills"
@@ -1191,7 +1191,7 @@
                 <div data-w-id="86ebf9f6-3750-2468-f857-0407fdb08613" style="opacity:0" class="content">
                     <div class="footer__columns">
                         <div class="footer__col"><a href="#" class="header__logo w-inline-block"><img
-                                    src="/Assest/Images/LOGO.SVG" loading="lazy" alt="" class="logo-img" /></a></div>
+                                    src="/Assest/Images/LOGO.svg" loading="lazy" alt="" class="logo-img" /></a></div>
                         <div class="footer__col col--nav">
                             <ul role="list" class="footer__nav-list">
                                 <li class="footer__nav-list-item"><a href="#find-passion" class="footer__nav-link">Find
